# translator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  exceptions.py  languages.py  logging_config.py  main.py  schemas.py  translator.py
tests/: conftest.py  test_health.py  test_languages.py  test_translate.py
