[project]
name = "translator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
